# baseML

./: .gitignore  README.md
project/: pyproject.toml
project/package/: __main__.py
project/package/configs/run_configs/: mninst_train.yaml
project/package/data/: ListedDataset.py  MNIST.py
project/package/data/transforms/: common_transforms.py
project/package/helpers/: utils.py
project/package/losses/: ListedLosses.py
project/package/models/: ListedModels.py  MNISTModel.py  dummy.py
project/package/models/components/: FeedForward.py
project/package/tests/: chatgpt.py
project/package/trainers/: ListedTrainers.py  SimpleTrainer.py
